--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,14 @@ margin:0
   gap: 25px;
 }
 
+/* .GameLine{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 3%;
+  margin-left: 12%;
+} */
+
 @media screen and (max-width: 626px) {
   .playersforms {
     flex-direction: column; 
