with rating and stepback

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,13 +20,11 @@ margin:0
   gap: 25px;
 }
 
-/* .GameLine{
+.GameLine{
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 3%;
-  margin-left: 12%;
-} */
+}
 
 @media screen and (max-width: 626px) {
   .playersforms {
