--- a/client/src/components/Game/Board/Board.module.css
+++ b/client/src/components/Game/Board/Board.module.css
@@ -1,10 +1,15 @@
 .board {
-   width: 40vw;
-   height: 40vw;
+   width: 45vw;
+   height: 45vw;
    background-color: rgba(127, 255, 212, 0.801);
    border: 1px solid rgb(19, 176, 79);
    display: flex;
    flex-direction: column;
+   }
+
+   .game{
+      display: flex;
+      flex-direction: column;
    }
    
    .row {
@@ -19,6 +24,7 @@
    margin-bottom: 5%;
    justify-content: center;
    margin-top: 2%;
+   margin: 5 -5px;
    }
    
    .step { 
@@ -50,5 +56,11 @@
       .board {
       max-width: 45vw;
       max-height: 45vw;
+      }
+   }
+
+   @media screen and (max-width: 399px) {
+      .board {
+     margin-left: 5%;
       }
    }
